8316456: StackWalker may skip Continuation::yield0 frame mistakenly